fixed spacing between posts

--- a/style.css
+++ b/style.css
@@ -1,46 +1,55 @@
 .plusVote {
-  color: green;
+    color: green;
 }
 
 .negativeVote {
-  color: red;
+    color: red;
 }
 
 .image {
-  height: 200px;
-  width: 200px;
+    height: 200px;
+    width: 200px;
+    /*margin-top: 20px;*/
 }
 
 .dropdown {
-  list-style-type: none;
+    list-style-type: none;
+    padding-top: 5px;
 }
 
 .commentAuth {
-  font-weight: bold;
+    font-weight: bold;
+}
+
+.onePost {
+  /*background-color: #EDEDF0;*/
+    margin-bottom: 20px;
 }
 
 /*angular animations*/
 
 .ng-enter {
-  transition:0.5s linear all;
-  opacity:0;
+    transition: 0.5s linear all;
+    opacity: 0;
 }
 
 .ng-enter.ng-enter-active {
-  opacity:1;
+    opacity: 1;
 }
 
 .ng-leave {
-  transition:0.6s linear all;
-  opacity:1;
+    transition: 0.6s linear all;
+    opacity: 1;
 }
 
 .ng-leave.ng-leave-active {
-  opacity:0;
+    opacity: 0;
 }
 
+
 /*This is for our hiding (this is not a class from ng-animate)*/
+
 .ng-hide {
-  transition:0.6s linear all;
-  opacity:0;
+    transition: 0.6s linear all;
+    opacity: 0;
 }
